--- a/style.css
+++ b/style.css
@@ -17,15 +17,21 @@ body {
 
 .header-text-container {
     align-items: center;
-    width: 1000px;
     display: flex;
-    gap: 20px;
+    gap: 50px;
+    justify-content: center;
+    margin: 20px 0 70px;
+}
+
+.header-text {
+    flex-basis: 500px;
 }
 
 .header-text > h2 {
     font-size: 48px;
     color: #F9FAF8;
     font-weight: 900;
+    margin: 10px 0;
 }
 
 .header-text > p {
@@ -42,12 +48,13 @@ body {
     border-radius: 10px;
 }
 
-.header-text-container > img {
-    /* width: 50%; */
-    margin: 20px;
-}
-
 /* --- NAVBAR --- */
+
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
 h1 {
     margin: 0;
@@ -61,12 +68,6 @@ ul {
     padding: 0;
     display: flex;
     gap: 30px;
-}
-
-.navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
 }
 
 a {
