--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ a {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 5vh 20vh;
+    margin: 5vh 20vh 10vh;
 }
 
 .body-images > h2 {
@@ -94,12 +94,21 @@ a {
 
 .container-imgs {
     display: flex;
+    justify-content: center;
+    gap: 60px;
     flex-wrap: wrap;
 }
 
-.container-imgs > img {
+.imgs-info {
+    text-align: center;
+    flex-basis: 150px;
+}
+
+.imgs-info > img {
     width: 200px;
     height: 200px;
+    border: 4px solid #3882F6;
+    border-radius: 20px;
 }
 
 /* --- QUOTE --- */
