--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 body {
     font-family: Roboto, sans-serif;
@@ -116,15 +116,20 @@ a {
 .quote {
     background-color: #E5E7EB;
     display: flex;
-    justify-content: center;
-    /* padding: 80px; */
-    padding: 10vh 30vh;
+    flex-direction: column;
+    padding: 8em 400px;
 }
 
 .quote > p {
     font-size: 36px;
-    font-weight: light;
+    font-weight: 300;
     font-style: italic;
+    color: #1F2937;
+}
+
+.quote > h3 {
+    align-self: flex-end;
+    margin: 0;
     color: #1F2937;
 }
 
