--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
 
 .header-text > p {
     font-size: 18px;
-    color: #E5E7EB;
+    color: #dedfe0;
 }
 
 .header-text > button {
@@ -46,6 +46,8 @@ body {
     padding: 10px 30px;
     cursor: pointer;
     border-radius: 10px;
+    font-size: 15px;
+    font-weight: 600;
 }
 
 /* --- NAVBAR --- */
@@ -102,6 +104,7 @@ a {
 .imgs-info {
     text-align: center;
     flex-basis: 150px;
+    color: #646571;
 }
 
 .imgs-info > img {
@@ -117,7 +120,7 @@ a {
     background-color: #E5E7EB;
     display: flex;
     flex-direction: column;
-    padding: 8em 400px;
+    padding: 7em 400px;
 }
 
 .quote > p {
@@ -137,12 +140,44 @@ a {
 
 .call-box-container {
     padding: 10vh 20vh;
+    display: flex;
+    justify-content: center;
 }
 
 .call-box {
     display: flex;
     background-color: #3882F6;
-    padding: 50px;
+    padding: 50px 120px;
+    border-radius: 10px;
+    justify-content: space-between;
+    width: 800px;
+}
+
+.call-box-text {
+    display: flex;
+    flex-direction: column;
+}
+
+.call-box-text > h3 {
+    color: #F9FAF8;
+    margin: 0;
+}
+
+.call-box-text > p {
+    color: #dedfe0;
+    margin: 0;
+}
+
+.call-box > button {
+    background-color: #3882F6;
+    color: white;
+    border: 2px solid white;
+    padding: 10px 30px;
+    cursor: pointer;
+    border-radius: 10px;
+    font-size: 15px;
+    font-weight: 600;
+    flex-shrink: 0;
 }
 
 /* --- FOOTER --- */
